prod-k8s/jardin-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    networking/allow-internet-access: "true"
    app: jardin-back
  name: jardin-back-prod
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jardin-back
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jardin-back
    spec:
      containers:
      - image: anonymeio/jardin-prod:0.0.3
        name: jardin-back
        command: ["/bin/sh", "-c","npm run init-db", "npm run init-data","npm run migrate", "npm run serve"]
