prod-k8s/jardin-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-prod
  namespace: prod
  annotations:
      prometheus.io/scrape: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: nginx-conf-prod
          mountPath: "/etc/nginx/conf.d"
      volumes:
      - name: nginx-conf-prod
        configMap:
          name: nginx-conf-prod
