prod-k8s/db-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: prod
  name: postgre
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432

---


kind: Endpoints
apiVersion: v1
metadata:
  namespace: prod
  name: postgre
subsets:
  - addresses:
      - ip: 34.72.159.142
    ports:
      - port: 5432
