prod-k8s/jardin-back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jardin-back
  name: jardin-svc
  namespace: prod
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: jardin-back
  type: NodePort
status:
  loadBalancer: {}
