prod-k8s/jardin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: anonyme.io
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: jardin-prod-svc
          servicePort: 3000
        path: /prod-api(/|$)(.*)
      - backend:
          serviceName: nginx-prod
          servicePort: 80
        path: /nginx-prod(/|$)(.*)
  - host: anonyme.io 
    http:
      paths:
      - backend:
          serviceName: jardin-prod-svc
          servicePort: 3000
        path: /prod-api
      - backend:
          serviceName: nginx-prod
          servicePort: 80
        path: /nginx-prod
